--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,58 +1,41 @@
-PARSIM Changelog below
-FIXME todo make brief
+2003-11-13  Andras Varga
 
-2003-04-20  Andras Varga
+	* Checked in parallel simulation code that was developed March-May 2003,
+	during my stay at Monash University. Changes:
 
+	2003-04-20  Andras Varga
 	* cmodule.cc: setGateSize(): added check for negative vector size
 
-2003-04-15  Andras Varga
-
-	* csimplemodule.cc: fixed bug introduced in 2.3b1 in deleteModule() 
-	which caused deleting another module (i.e. mod->deleteModule()) 
+	2003-04-15  Andras Varga
+	* csimplemodule.cc: fixed bug introduced in 2.3b1 in deleteModule()
+	which caused deleting another module (i.e. mod->deleteModule())
 	to crash.
 
-2003-03-30  Andras Varga
-
+	2003-03-30  Andras Varga
 	* Makefile.vc uses implicit rules
 
-2003-03-25  Andras Varga
-
-	* cmodule.cc: method isSimple() moved to base class cModule where it 
+	2003-03-25  Andras Varga
+	* cmodule.cc: method isSimple() moved to base class cModule where it
 	uses dynamic_cast.
-
-	* ctypes.cc: cModuleType::create() methods reorganized (see 
+	* ctypes.cc: cModuleType::create() methods reorganized (see
 	include/ChangeLog)
-	
-2003-03-23  Andras Varga
 
+	2003-03-23  Andras Varga
 	* split cmodule.cc: cSimpleModule put into new file csimplemodule.cc
-
 	* cobject.cc: type of namestr member changed from char* to opp_string
-
 	* added cscheduler.cc, changed csimul.cc: cSimulation::nextModule()
-	now relies on a scheduler object, subclassed from cScheduler. 
+	now relies on a scheduler object, subclassed from cScheduler.
 
-2003-03-20  Andras Varga
-
-	* nearly all files: implementations of netPack()/netUnpack() moved 
-	here from MPI/PVM directories. These functions now use the cCommBuffer 
-	interface, so they're no longer specific to the communications library 
+	2003-03-20  Andras Varga
+	* nearly all files: implementations of netPack()/netUnpack() moved
+	here from MPI/PVM directories. These functions now use the cCommBuffer
+	interface, so they're no longer specific to the communications library
 	(ie.MPI.PVM,..)
-
-	* TODO: for all classes that don't have netPack()/netUnpack() 
-	implemented, add empty implementation that throws "not implemented"
-	exception when called.
-
-	* TODO: implement cPVMCommunications!
-
------------------------------------
-END PARSIM changelog
------------------------------------
 
 2003-11-09  Andras Varga
 
 	* csimul.cc: added optional support for dynamic loading of NED files.
-	If WITH_NETBUILDER was defined (e.g. via -D compiler option) when 
+	If WITH_NETBUILDER was defined (e.g. via -D compiler option) when
 	compiling the sim. kernel, one can use the cSimulation::loadNedFile()
 	function to pull in compound modules, channels and network definitions
 	from NED files at runtime. If the sim. kernel was compiled without
@@ -60,14 +43,14 @@ END PARSIM changelog
 	when called.
 	   cSimulation::loadNedFile() works by invoking code in src/netbuilder,
 	which in turn relies on the nedxml library. Thus, when WITH_NETBUILDER
-	is used, simulation executables must be linked with the nedxml library 
-	(and thus also with an XML parser, if nedxml was compiled to support 
+	is used, simulation executables must be linked with the nedxml library
+	(and thus also with an XML parser, if nedxml was compiled to support
 	XML input). When compiling without WITH_NETBUILDER, nedxml and also
 	the stuff in src/netbuilder can be left out from the link.
 
 2003-11-01  Andras Varga
 
-	* cdispstr.cc: cDisplayString::setTagArg() now adds the tag if it 
+	* cdispstr.cc: cDisplayString::setTagArg() now adds the tag if it
 	doesn't exist yet
 
 2003-10-21  Andras Varga
@@ -78,7 +61,7 @@ END PARSIM changelog
 
 2003-10-02  Andras Varga
 
-	* util.h: added implementation of cContextSwitcher internal class, 
+	* util.h: added implementation of cContextSwitcher internal class,
 	needed by the new Enter_Method() and Enter_Method_Silent() macros.
 
 	* ccoroutine.cc: bugfix: DeleteFiber(lpFiber) crashes if lpFiber==0
@@ -93,7 +76,7 @@ END PARSIM changelog
 2003-06-16  Andras Varga
 
 	* cexception.cc: handle exceptions during initialization:
-	if cException ctor is invoked before main() has started, we print 
+	if cException ctor is invoked before main() has started, we print
 	the error message and call exit(1).
 
 2003-06-14  Andras Varga
@@ -103,8 +86,8 @@ END PARSIM changelog
 
 2003-04-15  Andras Varga
 
-	* csimplemodule.cc: fixed bug introduced in 2.3b1 in deleteModule() 
-	which caused deleting another module (i.e. mod->deleteModule()) 
+	* cmodule.cc: fixed bug introduced in 2.3b1 in deleteModule()
+	which caused deleting another module (i.e. mod->deleteModule())
 	to crash.
 
 2003-03-15  ------ omnetpp-2.3b2 released ------
@@ -116,7 +99,7 @@ END PARSIM changelog
 
 2003-03-10  Andras Varga
 
-	* ctype.cc: fixed bug (introduced in 2.3b1) in cLinkType constructor 
+	* ctype.cc: fixed bug (introduced in 2.3b1) in cLinkType constructor
 	which eventually caused NED channels not to work.
 
 2003-02-15  ------ omnetpp-2.3b1 released ------
@@ -126,8 +109,8 @@ END PARSIM changelog
 	* chist.cc: fix: clearResult() now doesn't reset num_cells.
 
 	* To be done in the future: observation count and histogram cell values
-	should be made unsigned long, and when obs. count would overflow, 
-	issue a warning and ignore further collect() calls. Also TBD: 
+	should be made unsigned long, and when obs. count would overflow,
+	issue a warning and ignore further collect() calls. Also TBD:
 	check for integer overflows in cKSplit and cPSquare.
 
 2003-02-14  Andras Varga
@@ -141,7 +124,7 @@ END PARSIM changelog
 
 2003-02-10  Andras Varga
 
-	* chist.cc: cEqdHistogramBase: collectTransformed() and pdf() made 
+	* chist.cc: cEqdHistogramBase: collectTransformed() and pdf() made
 	safer (floating-point rounding errors could cause addressing out
 	of cellv[] array)
 
