--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-13  Andras Varga
 
+	* statinsp.cc: added typecast for MSVC 7.0 compiler [reported by Bob 
+	Scheffler]
+
+2003-11-13  Andras Varga
+
 	* Checked in parallel simulation code that was developed March-May 2003,
 	during my stay at Monash University. Changes:
 
