--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,8 @@
+TBD: add object categories to filter:
+ [] modules  [] queues    [] statistics
+ [] messages [] variables [] others
+plus "Box them!" button -- opens containerinspector with these objects
+
 2003-11-29  Andras Varga
 
 	* insplist.tcl: added <pluginname>:inspectorUpdate Tkenv plugin 
@@ -7,7 +12,8 @@
 
 	* inspector listboxes changed to multicolumn listboxes from BLT
 
-	* .cc/.h files: some refactoring and cleanup
+	* .cc/.h files: some refactoring and cleanup; lots of obsolete code
+	removed
 
 2003-11-13  Andras Varga
 
