--- a/samples/dyna/ChangeLog
+++ b/samples/dyna/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-04  Andras Varga
+
+	* ned and msg files: comments reformatted to make them opp_neddoc friendly.
+
 2003-10-06  Andras Varga
 
 	* omnetpp.ini: "q=" tag added to display string
