--- a/samples/fddi/ChangeLog
+++ b/samples/fddi/ChangeLog
@@ -1,11 +1,15 @@
+2003-11-04  Andras Varga
+
+	* ned and msg files: comments reformatted to make them opp_neddoc friendly.
+
 2003-11-11  Andras Varga
 
-	* ned files: removed "machines" and "on" sections, as they became 
+	* ned files: removed "machines" and "on" sections, as they became
 	obsolete with the new parallel simulation architecture
 
-	* ssm_ifs.cc: syncpoint() calls no longer supported in new parallel 
+	* ssm_ifs.cc: syncpoint() calls no longer supported in new parallel
 	simulation architecture
-		
+
 2003-06-16  ------ omnetpp-2.3 released ------
 
 2003-03-15  ------ omnetpp-2.3b2 released ------
