--- a/samples/fifo1/ChangeLog
+++ b/samples/fifo1/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-04  Andras Varga
+
+	* ned and msg files: comments reformatted to make them opp_neddoc friendly.
+
 2003-10-06  Andras Varga
 
 	* fifonet1.ned: added "q=" tag to display string (displays queue length)
