--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-05  Andras Varga
+
+	* opp_neddoc and parts polished and brought to work on Windows.
+	See tests at test/opp_neddoc.
+
 2003-10-02  Andras Varga
 
 	* opp_makemake.in, opp_nmakemake: a thorough rewrite of how 
